<resources>
    <string name="app_name">To do list</string>
    <string name="label_new_task">Criar Tarefa</string>
    <string name="label_title">Título</string>
    <string name="label_data">Data</string>
    <string name="label_hora">Hora</string>
    <string name="label_cancelar">Cancelar</string>
    <string name="add_task">Adicionar Tarefa</string>
    <string name="label_delete">Deletar</string>
    <string name="label_edit">Editar</string>
    <string name="label_dont_have_task">Ops! Você não possui nenhuma tarefa</string>
    <string name="txtTarefas">Tarefas</string>
</resources>